K8s/base/central-station.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-station
spec:
  selector:
    matchLabels:
      app: central-station
  template:
    metadata:
      labels:
        app: central-station
    spec:
      containers:
      - name: central-station
        image: yousseftaman/central-station:latest
        ports:
        - containerPort: 8085
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
