K8s/base/station-stream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: station-stream
spec:
  selector:
    matchLabels:
      app: station-stream
  template:
    metadata:
      labels:
        app: station-stream
    spec:
      containers:
      - name: station-stream
        image: yousseftaman/rain-alert-stream:latest
        ports:
        - containerPort: 8087
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
