K8s/base/kafka-connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: kafka-connect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
      - name: kafka-connect
        image: yousseftaman/kafka-connect-s3:latest
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "1Gi" 
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
