K8s/base/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - name: internal
      port: 9092
    - name: external
      port: 9094
    - name: controller
      port: 9093
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnamilegacy/kafka:latest
        volumeMounts:
        - name: kafka-data
          mountPath: /bitnami/kafka
      - name: metricbeat
        image: docker.elastic.co/beats/metricbeat:8.13.4
        args:
        - -e
        - -strict.perms=false
        volumeMounts:
        - name: metricbeat-config
          mountPath: /usr/share/metricbeat/metricbeat.yml
          subPath: metricbeat.yml
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: metricbeat-config
        configMap:
          name: metricbeat-kafka-config
  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
