K8s/base/local-stack-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
spec:
  type: ClusterIP
  ports:
    - port: 4566
      targetPort: 4566
  selector:
    app: localstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack
        image: localstack/localstack:latest
