K8s/base/nifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
spec:
  ports:
    - port: 8443
      targetPort: 8443
  selector:
    app: nifi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
spec:
  serviceName: "nifi"
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
      - name: nifi
        image: yousseftaman/nifi:latest
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        - name: nifi-data
          mountPath: /opt/nifi/nifi-current/conf
        - name: nifi-repos
          mountPath: /opt/nifi/nifi-current/provenance_repository
          subPath: provenance
    
  volumeClaimTemplates:
  - metadata:
      name: nifi-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resourceRequests:
        storage: 10Gi
