K8s/base/schema-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
spec:
  ports:
    - port: 8081
  selector:
    app: schema-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
spec:
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: confluentinc/cp-schema-registry:7.5.0
        command: ["/bin/bash", "-c"]
        args:
          - |
            unset SCHEMA_REGISTRY_PORT
            exec /etc/confluent/docker/run
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
