K8s/base/station.yaml
apiVersion: v1
kind: Service
metadata:
  name: station
spec:
  clusterIP: None
  selector:
    app: station
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: station
spec:
  replicas: 1
  serviceName: station
  selector:
    matchLabels:
      app: station
  template:
    metadata:
      labels:
        app: station
    spec:
      containers:
      - name: station 
        image: yousseftaman/station:latest
        ports:
        - containerPort: 8086
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
